Fix image stretching

--- a/_styles/main.css
+++ b/_styles/main.css
@@ -154,6 +154,7 @@ hr {
 
 img {
   max-width: 100%;
+  height: auto;
 }
 
 img.h1 {
